--- a/main.html
+++ b/main.html
@@ -7,6 +7,25 @@
 </head>
 
 <body>
+	<form action="" id="my-form">
+        <div class="input-fields">
+            <label for="first-name">First Name:</label>
+            <input type="text" name="first-name" id="first-name">
+        </div>
+        <div class="input-fields">
+            <label for="last-name">Last Name:</label>
+            <input type="text" name="last-name" id="last-name">
+        </div>
+        <div class="input-fields">
+            <label for="phone">Phone Number:</label>
+            <input type="text" name="phone" id="phone">
+        </div>
+        <div class="input-fields">
+            <label for="email">Email ID:</label>
+            <input type="text" name="email" id="email">
+        </div>
+        <button type="submit">Submit</button>
+     </form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
