--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
             <label for="email">Email ID:</label>
             <input type="text" name="email" id="email">
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit" id="submit">Submit</button>
      </form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
