--- a/main.html
+++ b/main.html
@@ -10,19 +10,19 @@
 	<form action="" id="my-form">
         <div class="input-fields">
             <label for="first-name">First Name:</label>
-            <input type="text" name="first-name" id="first-name">
+            <input type="text" name="First Name" id="first-name">
         </div>
         <div class="input-fields">
             <label for="last-name">Last Name:</label>
-            <input type="text" name="last-name" id="last-name">
+            <input type="text" name="Last Name" id="last-name">
         </div>
         <div class="input-fields">
             <label for="phone">Phone Number:</label>
-            <input type="text" name="phone" id="phone">
+            <input type="text" name="Phone Number" id="phone">
         </div>
         <div class="input-fields">
             <label for="email">Email ID:</label>
-            <input type="text" name="email" id="email">
+            <input type="text" name="Email ID" id="email">
         </div>
         <button type="submit" id="submit">Submit</button>
      </form>
